# RPI_Pico_W

./: .gitignore  README.md  prueba.py
C++/Blink/: CMakeLists.txt
C++/Blink/src/: main.cpp
C++/Coche/: CMakeLists.txt  core1.cpp  main.cpp
C++/Coche/classes/: motor.h
C++/Coche/includes/: core0.h  pagina.h
C++/Grande/: CMakeLists.txt
C++/Grande/headers/: Boton.h  Buzzer.h  CONSTANTES.h  Encoder.h  ICallback.h  LETRAS.h  Led.h  Oled.h  SD.h  core1.h
C++/Grande/src/: core_1.cpp  hw_config.c  main.cpp
C++/prueba/: CMakeLists.txt  main.cpp
C++/ritmo/: CMakeLists.txt
C/Blink/: CMakeLists.txt
C/FreeRTOS/: CMakeLists.txt
C/Grande/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
C/Grande/PC/: main.c  serial_read
C/Grande/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
C/Grande/img/h/: 0.h  1.h  2.h  3.h  4.h  5.h  6.h  7.h  8.h
C/Grande/img/txt/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
C/Grande/include/: constantes.h  core0.h  core1.h  letras.h  uno.h
C/Grande/pico-sdk/: Makefile  cmake_install.cmake
C/Grande/pico-sdk/docs/: Makefile
C/Grande/pico-sdk/src/: Makefile  cmake_install.cmake
C/Grande/pico-sdk/src/common/: Makefile  cmake_install.cmake
C/Grande/pico-sdk/src/common/boot_picoboot/: Makefile
C/Grande/pico-sdk/src/common/boot_uf2/: Makefile
C/Grande/pico-sdk/src/common/pico_base/: Makefile
C/Grande/pico-sdk/src/common/pico_binary_info/: Makefile
C/Grande/pico-sdk/src/common/pico_bit_ops/: Makefile
C/Grande/pico-sdk/src/common/pico_divider/: Makefile
C/Grande/pico-sdk/src/common/pico_stdlib/: Makefile
C/Grande/pico-sdk/src/common/pico_sync/: Makefile
C/Grande/pico-sdk/src/common/pico_time/: Makefile
C/Grande/pico-sdk/src/common/pico_usb_reset_interface/: Makefile
C/Grande/pico-sdk/src/common/pico_util/: Makefile
C/Grande/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
C/Grande/pico-sdk/src/rp2040/hardware_regs/: Makefile
C/Grande/pico-sdk/src/rp2040/hardware_structs/: Makefile
C/Grande/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
C/Grande/pico-sdk/src/rp2_common/boot_stage2/: Makefile
C/Grande/pico-sdk/src/rp2_common/cmsis/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_adc/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_base/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_claim/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_clocks/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_divider/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_dma/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_exception/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_flash/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_gpio/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_i2c/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_interp/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_irq/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_pio/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_pll/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_pwm/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_resets/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_rtc/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_spi/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_sync/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_timer/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_uart/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_vreg/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_watchdog/: Makefile
C/Grande/pico-sdk/src/rp2_common/hardware_xosc/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_async_context/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_bit_ops/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_bootrom/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_btstack/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_cxx_options/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_cyw43_arch/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_cyw43_driver/: Makefile  cmake_install.cmake
C/Grande/pico-sdk/src/rp2_common/pico_cyw43_driver/cybt_shared_bus/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_divider/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_double/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_fix/: Makefile  cmake_install.cmake
C/Grande/pico-sdk/src/rp2_common/pico_fix/rp2040_usb_device_enumeration/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_flash/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_float/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_i2c_slave/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_int64_ops/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_lwip/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_malloc/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_mbedtls/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_mem_ops/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_multicore/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_platform/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_printf/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_rand/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_runtime/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_standard_link/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_stdio/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_stdio_semihosting/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_stdio_uart/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_stdio_usb/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_stdlib/: Makefile
C/Grande/pico-sdk/src/rp2_common/pico_unique_id/: Makefile
C/Grande/pico-sdk/src/rp2_common/tinyusb/: Makefile
C/Grande/pico-sdk/tools/: Makefile
C/Grande/src/: core0.c  core1.c  hw_config.c  main.c
C/PWM/: CMakeLists.txt
C/PWM/src/: Musica.c  main.c
C/Pantalla1/: CMakeLists.txt
C/Pantalla1/src/: OledMio.c  main.c
C/TCPclient/: CMakeLists.txt
C/TCPclient/src/: main.c
C/UDP/: CMakeLists.txt
C/UDP/src/: main.c
(+4 files in other folders)
